--- a/views/login.ejs
+++ b/views/login.ejs
@@ -257,10 +257,10 @@ body {
     padding-top: 220px;
     padding-left: 130px;
     font-style: italic;
-    color:aliceblue
+    color:rgb(88, 14, 128)
 }
 a:hover {
-  color: hotpink;
+  color: whitesmoke;
 }
 a:link {
   color: violet;
