implemented heirarchical order and also resolved error in pm

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -109,7 +109,7 @@
                 <a class="dropdown-item" href="/admin/updatePM" >Change Project Mentor</a>
                 <a class="dropdown-item" href="/admin/addTA" >Add TA</a>
                 <a class="dropdown-item" href="/admin/deleteTA" >Delete TA</a>          
-                <a class="dropdown-item" href="/admin/Instructor" >Change Instructor</a>
+                <a class="dropdown-item" href="/admin/updateInstructor" >Change Instructor</a>
                 <a class="dropdown-item" href="/admin/addFaculty" >Add Faculty</a>
                 <a class="dropdown-item" href="/admin/deleteFaculty" >Delete Faculty</a>
                 <a class="dropdown-item" href="#"></a>
