--- a/views/facultyapproval.ejs
+++ b/views/facultyapproval.ejs
@@ -147,6 +147,10 @@
 
 </style>
 <body>
+    <div style="margin: 20px; font-size: 20px;">
+        <!-- <input type = "button" value="Back" onclick="back();" style="width: 200px; margin: 20px;align-self: center; border-style: solid;">-->
+        <a href="#" onclick="back();"> <-- Back</a> 
+    </div>
     <form id="main_form" method ='post' action = "/admin/<%= data.rollno %>">
 
         <label> Name of the Scholar: </label>
