--- a/views/ChangeProjectMentor.ejs
+++ b/views/ChangeProjectMentor.ejs
@@ -5,20 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Page</title>
-    <!-- <link rel = "stylesheet" href ="styles/asmin.css"></link> -->
-    
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <link rel="shortcut icon" href="#">
+
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
 
     <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</head>
+    <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="/styles.css"  />
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+  
+
+
+
 <style>
 body{
     padding:35px;
@@ -50,33 +54,138 @@ input[type=text], select {
     background-color: #45a049;
   }
   
-  div {
+  form div {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
   }
   </style>
-  <body>
-  
-  <h3 style="text-align: center;">Update Project Mentor</h3>
-  <div class="alert alert-success">
-  <%
-  if(message.length > 0){
-    var msg = message
-    console.log(msg[0])
-  %>
-  <%= message %> <%}%> </div>
-  <div>
-    <form action="/admin/updatePM" method = "post">
-      <label for="rollNo">For Student With Roll No* :</label>
-      <input type="text" id="rollNo" name="RollNo" required placeholder="Student Roll No..">
-  
-      <label for="name">New Project Mentor's Name* :</label>
-      <input type="text" id="name" name="PMnew" required  placeholder="Project Manager's Name..">
-  
-      <input type="submit" value="Update Project Mentor">
-    </form>
-  </div>
-  
+  </head>
+  <body class="sb-nav-fixed">
+        <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+            <!-- Navbar Brand-->
+            <a class="navbar-brand ps-3" href="/admin">Admin Page</a>
+            <!-- Sidebar Toggle-->
+            <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
+        </nav>
+        <div id="layoutSidenav">
+            <div id="layoutSidenav_nav">
+                <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+                    <div class="sb-sidenav-menu">
+                        <div class="nav">
+                            <div class="sb-sidenav-menu-heading">Core</div>
+                            <a class="nav-link" id = "viewAppl" href="/admin" onclick="showContent('viewAppl');">
+                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                                Back to Dashboard
+                            </a>
+                            <div class="sb-sidenav-menu-heading">Interface</div>
+                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
+                                <div class="sb-nav-link-icon"><i class="fas fa-database"></i></div>
+                                Update Data
+                                <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                            </a>
+                            <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
+                                <nav class="sb-sidenav-menu-nested nav">
+                                    <a class="nav-link" href="/admin/addStudent" >Add Student Data</a>
+                                    <a class="nav-link" href="/admin/deleteStudent" >Delete Student Data</a>
+                                    <a class="nav-link" href="/admin/updateFA" >Change FA</a>
+                                    <a class="nav-link" href="/admin/updatePM" >Change Project Mentor</a>
+                                    <a class="nav-link" href="/admin/addTA" >Add TA</a>
+                                    <a class="nav-link" href="/admin/deleteTA" >Delete TA</a>          
+                                    <a class="nav-link" href="/admin/updateInstructor" >Change Instructor</a>
+                                    <a class="nav-link" href="/admin/addFaculty" >Add Faculty</a>
+                                    <a class="nav-link" href="/admin/deleteFaculty" >Delete Faculty</a>
+                                    <a class="nav-link" href="#"></a>
+                                </nav>
+                            </div>
+                      
+                            <div class="sb-sidenav-menu-heading">Logout</div>
+                            <a class="nav-link" href="/logout">
+                                <div class="sb-nav-link-icon"><i class="fas fa-power-off"></i></div>
+                                Logout
+                            </a>
+                        </div>
+                    </div>
+                    <div class="sb-sidenav-footer">
+                        <div class="small">Logged in as:</div>
+                        Admin
+                    </div>
+                </nav>
+            </div>
+            <div id="layoutSidenav_content">
+              <main>
+                  <div class="container-fluid px-4">
+                      <h1 class="mt-4">Update Project Mentor</h1>
+                      <ol class="breadcrumb mb-4">
+                          <li class="breadcrumb-item active">Admin</li>
+                      </ol>
+                   
+
+                      <div class="card mb-4 content">
+                        <div class="card-header">
+                            <i class="fas fa-table me-2"></i>
+                            Update Project Mentor
+                        </div>
+                        <div class="card-body">
+                          <div class="alert alert-success">
+                            <%
+                            if(message.length > 0){
+                              var msg = message
+                              console.log(msg[0])
+                            %>
+                            <%= message %> <%}%> </div>
+                            <div>
+                              <form action="/admin/updatePM" method = "post">
+                                <label for="rollNo">For Student With Roll No* :</label>
+                                <input type="text" id="rollNo" name="RollNo" required placeholder="Student Roll No..">
+                            
+                                <label for="name">New Project Mentor's Name* :</label>
+                                <input type="text" id="name" name="PMnew" required  placeholder="Project Manager's Name..">
+                            
+                                <input type="submit" value="Update Project Mentor">
+                              </form>
+                            </div>
+                                                                                                        
+                  
+                  
+              </main>
+              <footer class="py-4 bg-light mt-auto">
+                  <div class="container-fluid px-4">
+                      <div class="d-flex align-items-center justify-content-between small">
+                          <div class="text-muted">Copyright &copy; __</div>
+                           <!-- <div>
+                              <a href="#">Privacy Policy</a>
+                              &middot;
+                              <a href="#">Terms &amp; Conditions</a>
+                          </div>  -->
+                      </div>
+                  </div>
+              </footer> 
+          </div>
+      </div>  
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
+  <script>
+
+    window.addEventListener('DOMContentLoaded', event => {
+
+    // Toggle the side navigation
+    const sidebarToggle = document.body.querySelector('#sidebarToggle');
+    if (sidebarToggle) {
+        // Uncomment Below to persist sidebar toggle between refreshes
+        // if (localStorage.getItem('sb|sidebar-toggle') === 'true') {
+        //     document.body.classList.toggle('sb-sidenav-toggled');
+        // }
+        sidebarToggle.addEventListener('click', event => {
+            event.preventDefault();
+            document.body.classList.toggle('sb-sidenav-toggled');
+            localStorage.setItem('sb|sidebar-toggle', document.body.classList.contains('sb-sidenav-toggled'));
+        });
+    }
+
+    });
+  </script>
   </html>
+
