drop down menu for all admin pages

--- a/views/AddFaculty.ejs
+++ b/views/AddFaculty.ejs
@@ -134,10 +134,10 @@ input[type=text], select {
                             <%= message %> <%}%> </div>
                             <div>
                               <form action="/admin/addFaculty" method = "post">
-                                <label for="name">Name :</label>
-                                <input type="text" id="instName" name="name" placeholder="Instructor Name..">
+                                <label for="name">Name</label>
+                                <input type="text" id="instName" name="name" placeholder="Instructor Name.." required>
                             
-                                <label for="email">Email* :</label>
+                                <label for="email">Email</label>
                                 <input type="text" id="instEmail" name="email" required  placeholder="Instructor's emailID..">
                             
                                 <input type="submit" value="Add Faculty">
