--- a/views/AddStudent.ejs
+++ b/views/AddStudent.ejs
@@ -100,6 +100,13 @@
         height: 47px !important; /* Adjust the value as needed */
         border-radius: 5px !important;
         line-height: 38px !important;
+        /* padding: 0.5% !important; */
+
+        display: flex !important;
+        flex-direction: column !important;
+        justify-content: center !important;
+        padding: auto 0 !important;
+
     }
     
     /* Adjust the position of the select field to align with other input fields */
