page not found added

--- a/views/page_not_found.ejs
+++ b/views/page_not_found.ejs
@@ -241,6 +241,22 @@ a:hover {
 @media all and (max-width: 499px) {
   #main-content h1 { font-size: 28px; }
 }
+
+#wordsearch ul li.selected {
+    background-color: rgb(247,166,32);
+    color: rgba(255,255,255,1);
+    font-weight: 400;
+}
+
+#main-content h1 {
+    margin: 0px;
+    font-weight: 400;
+    font-size: 42px;
+    margin-bottom: 40px;
+    line-height: normal;
+    color: rgb(247,166,32);
+}
+
   </style>
 </head>
 <body>
